--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,13 @@
         android:supportsRtl="true"
 
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".View.MainActivity">
+
+
+        </activity>
 
         <activity android:name=".Home.HomeActivity" />
-        <activity android:name=".flashscreen">
+        <activity android:name=".View.flashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
